Fixed date range not showing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,3 @@
 span {
-  float: left;
+  float: right;
 }
